src/tests/invalid/header.h
// LZW streaming compressor based on LZW AB.
// Copyright (c) 2016 David Bryant, 2018+ other authors, all rights reserved (see AUTHORS).
// Distributed under the BSD Software License (see LICENSE).

#if !defined(LZWS_TESTS_INVALID_HEADER_H)
#define LZWS_TESTS_INVALID_HEADER_H

#include "../../common.h"

lzws_result_t lzws_test_invalid_header();

#endif // LZWS_TESTS_INVALID_HEADER_H
